Updated blog posts

--- a/index.html
+++ b/index.html
@@ -2,12 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Glenn Hammond — eLearning design, design systems and video production. Portfolio, case studies and articles." />
+    <meta name="author" content="Glenn Hammond" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Preconnect for Adobe Fonts -->
+    <link rel="preconnect" href="https://use.typekit.net" crossorigin>
+    <!-- Adobe Fonts (ITC Avant Garde + Open Sans) -->
+    <link rel="stylesheet" href="https://use.typekit.net/vwz2evq.css">
+
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+
     <title>Glenn Hammond — eLearning · Design · Video</title>
+
+    <!-- Open Graph / Social preview -->
+    <meta property="og:title" content="Glenn Hammond — eLearning · Design · Video" />
+    <meta property="og:description" content="Portfolio and writing by Glenn Hammond, specialising in eLearning design, design systems, and instructional video." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/images/gh-profile.jpg" />
+    <meta property="og:image:alt" content="Glenn Hammond — profile" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Glenn Hammond — eLearning · Design · Video" />
+    <meta name="twitter:description" content="Portfolio and writing by Glenn Hammond, specialising in eLearning design, design systems, and instructional video." />
+    <meta name="twitter:image" content="/images/gh-profile.jpg" />
   </head>
+
   <body>
-    <div id="root"></div>
-<script type="module" src="/src/index.jsx"></script>
+    <!-- Skip link for keyboard users -->
+    <a href="#root" class="skip-link" style="position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to content</a>
+    <div id="root" role="main"></div>
+
+    <noscript>
+      <div style="padding:1rem;background:#fff;color:#111;text-align:center;">
+        This site requires JavaScript to run. Please enable JavaScript to view the site.
+      </div>
+    </noscript>
+
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
