Updated image filenames

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     <meta name="twitter:title" content="Glenn Hammond — eLearning · Design · Video" />
     <meta name="twitter:description" content="Portfolio and writing by Glenn Hammond, specialising in eLearning design, design systems, and instructional video." />
     <meta name="twitter:image" content="/images/gh-profile.jpg" />
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PXDLN9NVDG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  // Disable automatic page view so we can control SPA tracking
+  gtag('config', 'G-PXDLN9NVDG', { send_page_view: false });
+</script>
   </head>
 
   <body>
