--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Glenn Hammond — eLearning design, design systems and video production. Portfolio, case studies and articles." />
+    <meta
+      name="description"
+      content="Portfolio and writing by Glenn Hammond - eLearning design, xAPI, design systems and instructional video."
+    />
     <meta name="author" content="Glenn Hammond" />
     <meta name="theme-color" content="#ffffff" />
 
@@ -36,21 +39,7 @@
 
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
 
-    <title>Glenn Hammond — eLearning · Design · Video</title>
-
-    <!-- Open Graph / Social preview -->
-    <meta property="og:title" content="Glenn Hammond — eLearning · Design · Video" />
-    <meta property="og:description" content="Portfolio and writing by Glenn Hammond, specialising in eLearning design, design systems, and instructional video." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/images/gh-profile.jpg" />
-    <meta property="og:image:alt" content="Glenn Hammond — profile" />
-    <meta property="og:locale" content="en_US" />
-
-    <!-- Twitter card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Glenn Hammond — eLearning · Design · Video" />
-    <meta name="twitter:description" content="Portfolio and writing by Glenn Hammond, specialising in eLearning design, design systems, and instructional video." />
-    <meta name="twitter:image" content="/images/gh-profile.jpg" />
+    <title>Glenn Hammond - eLearning, xAPI, Design</title>
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PXDLN9NVDG"></script>
