Image links created

--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
 
     <title>Glenn Hammond - eLearning, xAPI, Design</title>
 
+    <!-- SEO / Social share -->
+    <meta
+      name="description"
+      content="Glenn Hammond — eLearning design, xAPI, and design systems. Portfolio, case studies and articles."
+    />
+
+    <!-- Open Graph (Facebook, iMessage, Slack, etc.) -->
+    <meta property="og:title" content="Glenn Hammond - eLearning, xAPI, Design" />
+    <meta
+      property="og:description"
+      content="eLearning design, xAPI, and design systems. Portfolio, case studies and articles."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://glennhammond.com/" />
+    <meta
+      property="og:image"
+      content="https://glennhammond.com/images/design-system/glenn-hammond-site-assets-elearning-design-system.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter/X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Glenn Hammond - eLearning, xAPI, Design" />
+    <meta
+      name="twitter:description"
+      content="eLearning design, xAPI, and design systems. Portfolio, case studies and articles."
+    />
+    <meta
+      name="twitter:image"
+      content="https://glennhammond.com/images/design-system/glenn-hammond-site-assets-elearning-design-system.jpg"
+    />
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PXDLN9NVDG"></script>
 <script>
